# llms

./: .gitignore
llms/: backend.env  docker-compose.yml
llms/app/: Dockerfile  readme.md  streamlit.py
llms/chatgpt_prompts/: Readme.md  l2-guidelines.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb
llms/cloud_llms/open_ai_tool/: Readme.md  app.py  explainer.py  pyproject.toml  text_to_speech.py
llms/cloud_llms/openai_api_example/: openai-api-demo.ipynb
llms/local_llms/dockermodelrunner/: Readme.md  main.py  main_openai.py  pyproject.toml
llms/local_llms/hugging_face/: pyproject.toml
llms/local_llms/hugging_face/hf_example1/: hf-sandbox.ipynb
llms/local_llms/hugging_face/my-first-space/: README.md
llms/local_llms/ollama/: Readme.md  main.py  ollama-module.py  pyproject.toml
