[project]
name = "open-ai-tool"
version = "0.1.0"
description = "OpenAI API tools and examples"
authors = [{ name = "Sahil Batra" }]
requires-python = ">=3.11"
dependencies = [
    "openai>=0.27.2",
    "requests>=2.28.2",
    "python-dotenv>=1.0.0",
    "streamlit>=1.20.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.17.0",
    "black>=23.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
]
