[project]
name = "hf-env"
version = "0.1.0"
description = "Hugging Face environment for LLM experiments"
authors = [{ name = "Sahil Batra" }]
requires-python = ">=3.10"
dependencies = [
    "gradio>=3.39.0",
    "huggingface-hub>=0.20.1",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.1",
    "transformers>=4.36.2",
    "lightning>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.28.0",
]
tensorflow = [
    "tensorflow>=2.15.0",
]
tensorflow-macos = [
    "tensorflow-macos>=2.15.0",
    "tensorflow-metal>=1.1.0",
]
